hard-gists/59cf3e5b6d96bf67bca34530e522be08/run.log
=== Docker Run Log for 59cf3e5b6d96bf67bca34530e522be08 ===
Started at: Mi 29. Okt 16:11:30 CET 2025

[2025-10-29 16:11:30] START: Running container for 59cf3e5b6d96bf67bca34530e522be08
[2025-10-29 16:11:30] SUCCESS: Container c89a9743b397a8672e1d15db1c0d6fa2a84c7d41a1b38a81ff08803da3a3777c started for 59cf3e5b6d96bf67bca34530e522be08
=== Container logs for 59cf3e5b6d96bf67bca34530e522be08 ===
  File "/snippet.py", line 72
    print "Save image"
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 59cf3e5b6d96bf67bca34530e522be08 ===
[2025-10-29 16:11:32] INFO: Container c89a9743b397a8672e1d15db1c0d6fa2a84c7d41a1b38a81ff08803da3a3777c has stopped
